src/objects/MMINVEST__c.object
<CustomObject>
    <description>(MBI) - MMD - Plan Sponsor - Pension Plan Investment Options</description>
    <fields>
        <fullName>FREQDAILY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Valuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FREQMON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Valuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FREQQTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarterly Valuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FREQWEEK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly Valuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IONAME__c</fullName>
        <label>Investment Option Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOSEQ_NO__c</fullName>
        <externalId>true</externalId>
        <label>Invest Opt Seq #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Pension_Plan__c</fullName>
        <label>MMD Pension Plan</label>
        <referenceTo>MMPLANS__c</referenceTo>
        <relationshipLabel>MMD Plan Invest Options</relationshipLabel>
        <relationshipName>MMD_Plan_Invest_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSEQ_NO__c</fullName>
        <label>Plan Sequence #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>MMD_Pension_Plan__r.PLAN_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>MMD_Pension_Plan__r.Plan_Type_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <label>MMD Plan Invest Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Plan Invest Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>